syntax = "proto3";

package go.micro.srv.PostOrders;

service Example {
	rpc PostOrders(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}
//web -》srv
message Request {
	string Sessionid = 1;
    bytes Body = 2 ;
}
//srv -》web
message Response {
    string Errno = 2;
    string Errmsg = 3;
    int64  Order_id = 1;

}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
